--- a/html/tablesorter/tablesorter.css
+++ b/html/tablesorter/tablesorter.css
@@ -2,6 +2,7 @@
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 	padding: 4px;
 	padding-left: 20px;
+	background-color: lightgray;
 }
 table.tablesorter thead tr .header {
 	background-image: url(bg.gif);
