--- a/bootstrap/sidenav.css
+++ b/bootstrap/sidenav.css
@@ -85,6 +85,7 @@
     height: 65px;
     font-size: 18px;
     line-height: 60px;
+    text-shadow: gray 0.1em 0.1em 0.2em;
 }
 
 .sidebar-nav > .sidebar-brand a {
