--- a/resources/bootstrap/bootstrap.custom.css
+++ b/resources/bootstrap/bootstrap.custom.css
@@ -35,3 +35,9 @@ nav.navbar{
     color: #fff;
     background: rgba(255,255,255,0.2);
 }
+
+#section-title-brand {
+  font-size: 14px;
+  text-decoration: none;
+  color: #fff;
+}
