override bootstrap css table-striped with helper classes

--- a/_resources/bootstrap/bootstrap.custom.css
+++ b/_resources/bootstrap/bootstrap.custom.css
@@ -41,3 +41,22 @@ nav.navbar{
   text-decoration: none;
   color: #fff;
 }
+
+/* override table-striped with helper classes */
+.table-striped > tbody > tr:nth-of-type(odd).bg-primary {
+  color: #fff;
+  background-color: #337ab7;
+}
+.table-striped > tbody > tr:nth-of-type(odd).bg-success {
+  background-color: #dff0d8;
+}
+.table-striped > tbody > tr:nth-of-type(odd).bg-info {
+  background-color: #d9edf7;
+}
+.table-striped > tbody > tr:nth-of-type(odd).bg-warning {
+  background-color: #fcf8e3;
+}
+.table-striped > tbody > tr:nth-of-type(odd).bg-danger {
+  background-color: #f2dede;
+}
+
